--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,13 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     text-align: center;
-    /* height: 100vh; */
+    height: 100vh;
 }
 
 .main {
-    width: auto;
+    width: 709px;
+    height: 217px;
+    margin: auto;
 }
 
 h1 {
